Lib: Start big refactor based on replacing Image and RegionImagePairs with Pattern